# nes

./: .gitignore  CMakeLists.txt  README.md
src/: c6502.cpp  c6502.h  main.cpp  platform.cpp  platform.h  ppu.cpp  ppu.h
test_data/: 1_Example.nes  2_ReadWrite.nes  3_Branches.nes  4_TheStack.nes  5_Instructions1.nes  6_Instructions2.nes  7_Graphics.nes
test_data/Tracelogs/: 1_Example.txt  2_ReadWrite.txt  3_Branches.txt  4_TheStack.txt  5_Instructions1.txt  6_Instructions2.txt  7_Graphics.txt
test_data/source/: 1_Example.asm  2_ReadWrite.asm  3_Branches.asm  4_TheStack.asm  5_Instructions1.asm  6_Instructions2.asm  7_Graphics.asm  BG.pcx  Sprites.pcx
